--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#PostgrreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5433/ncbi-gtr
+spring.datasource.username=postgres
+spring.datasource.password=password
+server.port=8080
+spring.sql.init.mode=always
 
+#spring.profiles.active=dev
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+#management.endpoint.beans.enabled=true
+#management.endpoint.mappings.enabled=true
+#
+#management.endpoint.shutdown.enabled=true
+#management.endpoint.startup.enabled=true
