--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>dev.khalifa</groupId>
-    <artifactId>gtr_genomic_study</artifactId>
+    <artifactId>gtrGenomicStudy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gtr_genomic_study</name>
-    <description>gtr_genomic_study</description>
+    <name>gtrGenomicStudy</name>
+    <description>gtrGenomicStudy</description>
     <properties>
         <java.version>17</java.version>
+<!--        <start-class>dev.khalifa.gtrGenomicStudy.Application</start-class>-->
     </properties>
     <dependencies>
         <dependency>
