--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,42 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+<!--        HAPI FHIR specific dependencies-->
+        <!-- This dependency includes the core HAPI-FHIR classes -->
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-base</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+
+        <!-- Include the client -->
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-client</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+
+        <!-- At least one "structures" JAR must also be included -->
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-structures-r5</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+
+        <!--
+        HAPI-FHIR uses Logback for logging support. The logback library is included
+        automatically by Maven as a part of the hapi-fhir-base dependency, but you
+        also need to include a logging library. Logback is used here, but log4j
+        would also be fine.
+        -->
+
+<!--        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>-->
+
     </dependencies>
 
     <build>
