--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 spring.sql.init.mode=always
 
 #spring.profiles.active=dev
-
+hapifhir_version=6.2.0
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #management.endpoint.beans.enabled=true
