--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,16 @@ management.endpoint.health.show-details=always
 #
 #management.endpoint.shutdown.enabled=true
 #management.endpoint.startup.enabled=true
+
+#SWAGGER: fixing an error: http://localhost:8080/swagger-ui/index.html ; http://localhost:8080/swagger-ui.html
+# The later URL of swagger redirects to the earlier one
+# API Docs.YML at http://localhost:8080/api-docs.yaml
+#Swagger requires specific way to do request mapping, as follow:
+#@RequestMapping(value = {"/path/{id}" }, method = RequestMethod.GET, produces="application/json")
+
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#spring.data.rest.base-path=/api
+
+springdoc.api-docs.path=/api-docs
+
+FHIR.serverBase.url = http://localhost:8080/fhir/
