Getresponse json from a json file for easier editing later

--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,17 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.0.4</version>
         </dependency>
+        
+<!--        to read JSON files to JSON objects -->
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
 
 
-<!--        HAPI FHIR specific dependencies-->
+        <!--        HAPI FHIR specific dependencies-->
         <!-- This dependency includes the core HAPI-FHIR classes -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
