--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ management.endpoint.health.show-details=always
 
 springdoc.api-docs.path=/api-docs
 
-FHIR.serverBase.url = http://localhost:8080/fhir/
+FHIR.serverBase.url=http://roffhi101a.mayo.edu:8083/fhir
