--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <properties>
         <java.version>17</java.version>
 <!--        <start-class>dev.khalifa.gtrGenomicStudy.Application</start-class>-->
+
+            <hapifhir_version>6.6.0</hapifhir_version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -91,21 +94,21 @@
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-base</artifactId>
-            <version>6.2.0</version>
+            <version>${hapifhir_version}</version>
         </dependency>
 
         <!-- Include the client -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-client</artifactId>
-            <version>6.2.0</version>
+            <version>${hapifhir_version}</version>
         </dependency>
 
         <!-- At least one "structures" JAR must also be included -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-structures-r5</artifactId>
-            <version>6.2.0</version>
+            <version>${hapifhir_version}</version>
         </dependency>
 
         <!--
